--- a/app/assets/stylesheets/api/songs/track_form.scss
+++ b/app/assets/stylesheets/api/songs/track_form.scss
@@ -66,6 +66,7 @@
 }
 
 .preview-image {
+  margin-left: 15px;
   height: 150px;
   width: 150px;
 }
